--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="score">
                     <div class="table">
                         <h1 id="title"></h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora totam ducimus tempore, molestiae, ipsam quidem non nam voluptas voluptatum exercitationem culpa rem sunt fuga! Rerum ex quisquam minima at neque!</p>
+                        <p>Lorem,psum dolor sit amet consectetur adipisicing elit. Tempora totam ducimus tempore, molestiae, ipsam quidem non nam voluptas voluptatum exercitationem culpa rem sunt fuga! Rerum ex quisquam minima at neque!</p>
                     </div>
                 </div>
             </div>
