Modification for patch a view bug

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
                     <li class="link"><a href="#"><i class="fas fa-bookmark"></i></a></li>
                     <li class="link"><a href="#"><i class="fas fa-cog"></i></a></li>
                 </ul>
-                <div class="score">
+                <div class="score" id="score">
                     <div class="table">
-                        <h1 id="title"></h1>
-                        <p>Lorem,psum dolor sit amet consectetur adipisicing elit. Tempora totam ducimus tempore, molestiae, ipsam quidem non nam voluptas voluptatum exercitationem culpa rem sunt fuga! Rerum ex quisquam minima at neque!</p>
+                        <h1 id="title">Lorem ipsum</h1>
+                        <p class="box">Lorem,psum dolor sit amet consectetur adipisicing elit. Tempora totam ducimus tempore, molestiae, ipsam quidem non nam voluptas voluptatum exercitationem culpa rem sunt fuga! Rerum ex quisquam minima at neque!</p>
+                        <p class="box">Lorem,psum dolor sit amet consectetur adipisicing elit. Tempora totam ducimus tempore, molestiae, ipsam quidem non nam voluptas voluptatum exercitationem culpa rem sunt fuga! Rerum ex quisquam minima at neque!</p>
+                        <p class="box">Lorem,psum dolor sit amet consectetur adipisicing elit. Tempora totam ducimus tempore, molestiae, ipsam quidem non nam voluptas voluptatum exercitationem culpa rem sunt fuga! Rerum ex quisquam minima at neque!</p>
+                        <button class="button">Read more</button>
                     </div>
                 </div>
             </div>
